--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,9 @@ beautifulsoup4>=4.12.2
 # HTTP requests and API interaction
 requests>=2.28.2
 
-# Scheduling
+# Scheduling and Parallelization
 schedule>=1.2.0
+psutil>=5.9.0
 
 # Utilities
 python-dotenv>=1.0.0  # Optional: For storing credentials securely
