--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 # Required packages for Walmart Leasing Checker
 
-# Web scraping
-selenium>=4.9.0
-webdriver-manager>=3.8.6
+# Web automation with Playwright
+playwright>=1.40.0  # Latest stable version
+
+# HTML parsing
 beautifulsoup4>=4.12.2
 
 # HTTP requests and API interaction
